# nostrsave

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.build  README.md  ROADMAP.md  TODO.md  config.sample.toml  install.sh
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  ROADMAP.md  pagination-architecture.md
src/: cli.rs  cli_parsers.rs  config.rs  crypto.rs  error.rs  main.rs  manifest.rs  relays_db.rs
src/chunking/: assembler.rs  mod.rs  splitter.rs
src/commands/: best_relays.rs  discover_relays.rs  download.rs  inspect_event.rs  list.rs  mod.rs  upload.rs
src/nostr/: codec.rs  events.rs  index.rs  mod.rs
src/relay/: discovery.rs  mod.rs
src/session/: db.rs  download.rs  mod.rs  upload.rs
