[package]
name = "nostrsave"
version = "0.1.1"
edition = "2021"

[dependencies]
# Nostr
nostr-sdk = "0.43"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Base64 encoding for binary data
base64 = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Progress indication
indicatif = "0.17"

# Directory paths
dirs = "6.0"

# HTTP client for relay discovery
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
futures = "0.3"

# Date/time for output
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
