[package]
name = "nostrsave"
version = "0.2.18"
edition = "2021"

[dependencies]
# Nostr
nostr-sdk = { version = "0.44.1", features = ["nip44"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Encryption / Key Derivation (for AES-256-GCM mode; nostr-sdk's nip44 uses ChaCha20-Poly1305)
aes-gcm = "0.10.3"
hkdf = "0.12.4"

# Compression + JSON-safe base85 encoding for Nostr payloads
zstd = "0.13"
z85 = "3.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Progress indication
indicatif = "0.17"

# Directory paths
dirs = "6.0"

# HTTP client for relay discovery
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
futures = "0.3"

# Random number generation
rand = "0.8"

# Date/time for output
chrono = "0.4"

# URL parsing
url = "2.5"

# SQLite for session tracking
rusqlite = { version = "0.32", features = ["bundled"] }

# File locking for session concurrency control
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.10"
